--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    uses: conda-incubator/setup-miniconda@v2
+    - name: Set up Conda
+      uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: mlflow_tasks_dev
           environment-file: environment.yml
