--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,7 +1,10 @@
 name: PyTest
 
 on:
-  workflow_dispatch:
+  push
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch
 
 jobs:
   pytest:
@@ -28,4 +31,4 @@ jobs:
 
     - name: Run Pytest
       run: |
-        pytest -W ignore tests/test_data_handler_tasks.py
+        pytest -W ignore
