--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,10 +1,10 @@
 name: PyTest
 
 on:
-  push
+  push:
   pull_request:
     branches: [ main ]
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   pytest:
