--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,10 +31,6 @@ jobs:
 
     - name: Run Pytest
       run: |
-        python -m nb_conda_kernels list
-        jupyter kernelspec list
-        mkdir ~/.jupyter
-        echo "{\"CondaKernelSpecManager\": {\"kernelspec_path\": \"--user\"}}" > ~/.jupyter/jupyter_config.json
-        python -m nb_conda_kernels list
-        jupyter kernelspec list
+        conda activate mlflow_tasks_dev
+        python -m ipykernel install --user --name mlflow_tasks_dev --display-name "mlflow_tasks_dev"
         pytest -W ignore
