--- a/tests/environment.yml
+++ b/tests/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - nb_conda_kernels
   - nbconvert=6.4.0
   - nbformat=5.1.3
+  - ipykernel
   - papermill=2.3.3
   - pip
   - pytest
