--- a/tests/environment.yml
+++ b/tests/environment.yml
@@ -1,13 +1,11 @@
 name: mlflow_tasks_dev
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - nbconvert=7.0.0
-  - nbformat=5.7.0
-  - ipykernel=6.4.1
-  - papermill=2.3.3
-  - pip
-  - pytest
-  - pip:
-    - mlflow==1.29.0
+  - mlflow=2.8.1
+  - nbformat=5.9.2
+  - nbconvert=7.12.0
+  - papermill=2.4.0
+  - pytest=7.4.3
+  - ipykernel=6.26.0
+  - ipywidgets=8.1.1
