--- a/tests/project/conda.yaml
+++ b/tests/project/conda.yaml
@@ -1,11 +1,8 @@
 name: mlflow_project_test
 channels:
   - conda-forge
-  - default
 dependencies:
-  - python-graphviz
-  - nbformat
-  - nbconvert
-  - papermill
-  - pip:
-    - mlflow
+  - mlflow=2.8.1
+  - nbformat=5.9.2
+  - nbconvert=7.12.0
+  - papermill=2.4.0
